--- a/crm/CoffeeShop/templates/CoffeeShop/dashboard.html
+++ b/crm/CoffeeShop/templates/CoffeeShop/dashboard.html
@@ -12,10 +12,20 @@
 			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm">
 				<tr>
-					<th></th>
+					
 					<th>Customer</th>
-					<th>Orders</th>
+					<th>Phone</th>
 				</tr>
+				
+				{% for i in customers %}
+					<tr>
+
+						<td>{{i.name}}</td>
+						<td>{{i.phone}}</td>
+					</tr>
+				{% endfor %}
+
+			
 
 			</table>
 		</div>
@@ -34,7 +44,18 @@
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
-		
+				
+				{% for i in orders %}
+					<tr>
+						<td>{{i.product}}</td>
+						<td>{{i.date_created}}</td>
+						<td>{{i.status}}</td>
+						<td><button>Update</button></td>
+						<td><button>Delete</button></td>
+
+					</tr>
+				{% endfor %}
+
 			</table>
 		</div>
 	</div>
