--- a/crm/CoffeeShop/templates/CoffeeShop/customers.html
+++ b/crm/CoffeeShop/templates/CoffeeShop/customers.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md">
             <div class="card card-body">
-                <h5>Customer:</h5>
+                <h5>Customer: {{customer.name}}</h5>
                 <hr>
                 <a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
                 <a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
@@ -19,8 +19,9 @@
             <div class="card card-body">
                 <h5>Contact Information</h5>
                 <hr>
-                <p>Email: </p>
-                <p>Phone: </p>
+                
+                <p>Email: {{customer.email}}</p>
+                <p>Phone: {{customer.phone}}</p>
             </div>
         </div>
     
@@ -28,7 +29,7 @@
             <div class="card card-body">
                 <h5>Total Orders</h5>
                 <hr>
-                <h1 style="text-align: center;padding: 10px"></h1>
+                <h1 style="text-align: center;padding: 10px">{{order_count}}</h1>
             </div>
         </div>
     </div>
@@ -60,7 +61,16 @@
                         <th>Update</th>
                         <th>Remove</th>
                     </tr>
-    
+                    {% for i in orders %}
+                        <tr>
+                            <td>{{i.product}}</td>
+                            <td>{{i.product.category}}</td>
+                            <td>{{i.date_created}}</td>
+                            <td>{{i.status}}</td>
+                            <td><a class="btn btn-sm btn-info" href="#">Update</a></td>
+                            <td><a class="btn btn-sm btn-danger" href="#">Delete</a></td>
+                        </tr>
+                    {% endfor %}
                 </table>
             </div>
         </div>
