--- a/crm/CoffeeShop/templates/CoffeeShop/dashboard.html
+++ b/crm/CoffeeShop/templates/CoffeeShop/dashboard.html
@@ -12,14 +12,14 @@
 			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm">
 				<tr>
-					
+					<th>Details</th>
 					<th>Customer</th>
 					<th>Phone</th>
 				</tr>
 				
 				{% for i in customers %}
 					<tr>
-
+						<td> <a class="btn btn-sm btn-info" href="{% url 'customer' i.id %}">view</a></td>
 						<td>{{i.name}}</td>
 						<td>{{i.phone}}</td>
 					</tr>
