dashboard delete btn func added

--- a/crm/CoffeeShop/templates/CoffeeShop/dashboard.html
+++ b/crm/CoffeeShop/templates/CoffeeShop/dashboard.html
@@ -52,7 +52,7 @@
 						<td>{{i.status}}</td>
 						<td><a class="btn btn-sm btn-info" href="{% url 'updateOrder' i.id %}">Update</a></td>
 
-						<td><a class="btn btn-sm btn-danger" href="{% url 'updateOrder' i.id %}">Delete</a></td>
+						<td><a class="btn btn-sm btn-danger" href="{% url 'deleteOrder' i.id %}">Delete</a></td>
 						
 
 					</tr>
